# verisight

./: $null  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  COMMIT_MESSAGE.txt  DEMO_PLAN.md  LINERA-SETUP.md  PLAN.md  PUSH-TO-GITHUB.md  QUICK-START.md  README.md  SANITY-CHECK.md  SECURITY_CHECKLIST.md  START-APP.bat  STOP-APP.bat  SYSTEM-TEST-REPORT.txt  TEST-RESULTS.md  TROUBLESHOOTING.md  start-backend.bat  start-frontend.bat  test-system.bat  vercel.json
.github/workflows/: linera-ci.yml  release.yml  wave-release.yml
backend/: .env  ipfs_client.py  requirements.txt  server.py
backend/ai_agents/: __init__.py  confidence_scorer.py  event_detector.py  source_verifier.py  summary_composer.py
backend/linera_client/: __init__.py  client.py
backend/oracle/: __init__.py  linera_oracle.py
backend/tests/: test_ipfs_client.py  (+3 more)
configs/: linera.testnet.env  mode.linera.env
docs/: JUDGES-CHECKLIST.md  LINERA_WINDOWS_WORKAROUND.md  ONCHAIN.md  SUBMISSION.md
frontend/: .env  .env.development  .env.example  .prettierignore  eslint.config.mjs  package-lock.json  package.json
linera/: Cargo.toml  README.md
linera/market/: Cargo.toml  README.md
linera/market/src/: lib.rs
linera/market/tests/: integration.rs
scripts/: auto-demo-setup.ps1  auto-test.ps1  deploy-local.ps1  deploy-local.sh  deploy-testnet.ps1  deploy-testnet.sh  dev-check.ps1  dev-check.sh  force-mock-mode.ps1  install-linera.ps1  kill-ports.ps1  record_demo.md  setup-deps.ps1  show-linera-evidence.ps1  start-mock.ps1  testnet_publish.sh  testnet_seed.sh  toggle-mode.ps1
(+52 files in other folders)
